<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventCellContainer"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_margin="5dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/eventNameTV"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/name" />

    <TextView
        android:id="@+id/eventDescriptionTV"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/desc" />

    <TextView
        android:id="@+id/eventDateTV"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/eventTimeTV"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:text="@string/time" />

</LinearLayout>