<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Calendar.WeekViewActivity">

    <Button
        android:id="@+id/weekly_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/monthly"
        android:textColor="@color/black"
        android:background="@null"
        android:textSize="20sp"
        android:onClick="monthlyAction"/>

    <LinearLayout
        android:id="@+id/current_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_arrow"
            android:textColor="@color/black"
            android:background="@null"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="previousWeekAction" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/current_date"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward_arrow"
            android:textColor="@color/black"
            android:background="@null"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="nextWeekAction"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/daysOfWeekLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tues"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/design_default_color_background" />

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <!--NAVBAR-->
    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:backgroundTint="@color/light_green" >

        <Button
            android:id="@+id/tasksButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/checked_24"
            android:backgroundTint="@color/dark_teal"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp"
            tools:ignore="SpeakableTextPresentCheck" />


        <Button
            android:id="@+id/CalendarButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_calendar_month_24"
            android:backgroundTint="@color/dark_teal"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/HomeButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_home_24"
            android:backgroundTint="@color/dark_teal"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/TimeButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_timer_24"
            android:backgroundTint="@color/dark_teal"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_settings_24"
            android:backgroundTint="@color/dark_teal"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
    <!--NAVBAR-->
</LinearLayout>